force-app/main/default/objects/Summaries__c/Summaries__c.object-meta.xml
<CustomObject>
    <label>פערים ומסקנות</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>סיכום אירוע Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>פערים ומסקנות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>