force-app/main/default/objects/Summaries__c/fields/Conclusiuons__c.field-meta.xml
<CustomField>
    <fullName>Conclusiuons__c</fullName>
    <label>מסקנות</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>