force-app/main/default/objects/Summaries__c/fields/Gap__c.field-meta.xml
<CustomField>
    <fullName>Gap__c</fullName>
    <label>פער</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>