force-app/main/default/objects/Summaries__c/fields/Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Report</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipName>Event_Conclusion</relationshipName>
    <type>Lookup</type>
</CustomField>