force-app/main/default/objects/Summaries__c/fields/Lessons__c.field-meta.xml
<CustomField>
    <fullName>Lessons__c</fullName>
    <label>לקחים</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>